src/features/emojiPicker.css
/* ... */
html.dark .btd-loaded {
  /*
 * Dark mode styles
 */

  --emoji-picker-background: #15202b;
  & .emoji-mart-dark {
    color: #fff;
    border-color: #555453;
    background-color: var(--emoji-picker-background);
  }

  & .emoji-mart-dark .emoji-mart-bar {
    border-color: #000000;
  }

  & .emoji-mart-dark .emoji-mart-search input {
    color: #fff;
    border-color: #555453;
    background-color: #10171e;
  }

  & .emoji-mart-dark .emoji-mart-search-icon svg {
    fill: #fff;
  }

  & .emoji-mart-dark .emoji-mart-category .emoji-mart-emoji:hover:before {
    background-color: #444;
  }

  & .emoji-mart-dark .emoji-mart-category-label span {
    background-color: var(--emoji-picker-background);
    color: #fff;
  }

  & .emoji-mart-dark .emoji-mart-skin-swatches {
    border-color: #555453;
    background-color: var(--emoji-picker-background);
  }

  & .emoji-mart-dark .emoji-mart-anchor:hover,
  & .emoji-mart-dark .emoji-mart-anchor:focus,
  & .emoji-mart-dark .emoji-mart-anchor-selected {
    color: #bfbfbf;
  }
}

/**
 * Custom styles to make it work better on smaller screens.
 */
@media (max-height: 800px) {
  .emoji-mart-scroll {
    height: 170px !important;
  }

  .emoji-mart-preview {
    height: 50px !important;
  }
}

@media (max-height: 600px) {
  .emoji-mart-scroll {
    height: 120px !important;
  }

  .emoji-mart-preview {
    display: none !important;
    height: 50px !important;
  }
}

/**
 * No need for the emoticon preview ¯\(ツ)/¯ 
 */
.emoji-mart-preview-emoticon {
  display: none;
}

/**
 * Invisible "overlay" we put around the picker to detect clicks outside of it
 */
#emojiPickerWrapper {
  position: fixed;
  width: 100vw;
  height: 100vh;
  z-index: 10000;
  left: -330px;
  top: 0;
}

.btd-emoji-button-wrapper {
  filter: saturate(0);
  transition-property: filter, transform;
  transition-duration: 300ms;
  transition-timing-function: ease;
  overflow: hidden;
  transform: scale(1);

  &:hover {
    filter: saturate(1);
    transform: scale(1.1);
  }
}

/* Allow room for emoji button in composer */
body[btd-emoji-picker='true'] .js-drawer .js-compose-text {
  width: calc(100% - 26px) !important;
}

